GitVersion1/objects/County_Community_District__c.object
<CustomObject>
    <fields>
        <fullName>Community__c</fullName>
        <label>Community</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County_matrix__c</fullName>
        <formula>District__c &amp; &quot; # &quot; &amp;  County__c &amp; &quot; # &quot; &amp;  County__c</formula>
        <label>County matrix</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>County-Community-District</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>District__c</columns>
        <columns>County__c</columns>
        <columns>Community__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>WPG-{0000}</displayFormat>
        <label>County-Community-District Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>County-Community-Districts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>